--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,6 +43,9 @@ jobs:
           name: Build-Artifacts
           path: ./output
 
+      - name: Compress output directory
+        run: zip -r build_output.zip ./output
+
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
